# raspimobot

./: .gitignore  CMakeLists.txt  README.md
doc/: audio_amplifier_lm386.fzz  design.tex  design_sketch.xcf  evaluation.tex  final_report.tex  implementation.tex  motor_controllers_l293d.fzz  motor_controllers_l293d_impl.fzz  requirements_and_design.tex
lib/: wiringPi.c  wiringPi.h
src/: audio.c  audio.h  bmp.c  bmp.h  camera.c  camera.h  gpio.c  gpio.h  logic.c  logic.h  main.c  motion_detect.c  motion_detect.h  motor.c  motor.h  remote.c  remote.h  util.c  util.h
